--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.8.0)
+project(LIBDEVICEINFO C)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+find_package(jansson REQUIRED)
 
-project(LIBDEVICEINFO C)
+set(CMAKE_C_FLAGS "-std=c99 -Wall -Wextra ${CMAKE_C_FLAGS}")
 
 option(BUILD_SHARED_LIBS "Build shared library" ON)
 
